<resources>
    <string name="app_name">Views</string>
    <string name="first_button">First Display</string>
    <string name="second_button">Second Display</string>
    <string name="third_button">Third Display</string>
    <string name="fourth_button">Fourth Display</string>
    <string name="fifth_button">Fifth Display</string>
    <string name="sixth_button">Sixth Display</string>
    <string name="seventh_button">Seventh Display</string>
    <string name="firstDisplay">First Display</string>
    <string name="secondDisplay">Second Display</string>
    <string name="thirdDisplay">Third Display</string>
    <string name="fourthDisplay">Fourth Display</string>
    <string name="fifthDisplay">Fifth Display</string>
    <string name="sixthDisplay">Sixth Display</string>
    <string name="seventhDisplay">Seventh Display</string>
    <string name="switcherText">View Switcher Screen</string>
    <string name="go_back">Go Back</string>
    <string name="topMiddleButtonText">Button</string>
    <string name="scrollViewText">Madeleine Albright’s 1997 commencement speech empowered the women at Mount Holyoke College by applauding their successes and reinforcing perseverance. She used the nation as a medium to convey the progress being made with international relations and talked about its prominence in the world stage. But all Albright did was motivate the graduating class about overcoming the inevitable challenges they would face in their life, which isn’t something they didn’t already know. She made her audience feel proud about being American and had them overlook her lack of content through the lack of specifics, incorrect extrapolation, and the use of generalized feel-good words.
	“We could stop there. Instead, we are pursuing a broader prosperity, in which those entrapped by poverty and discrimination are empowered to share, and in which every democracy on every continent will be included.” Albright captivated her audience with this section of her speech about a third of the way through. The gist of this statement is that we (the US) are improving our diplomatic relations with foreign governments by aiding their impoverished populations. This is already necessary to ensure global security, so restating this to a group of people who most likely will have nothing to do with international diplomacy served no purpose other than to make them feel like they were making a difference in their part of the world.
	She does the same generalized but irrelevant empowerment aspect of her speech later on; “In Burundi, I have seen women taking the lead in efforts to avoid the fate of neighboring Rwanda, where violence left three-quarters of the population female, and one-half of the women widows.” In this section of the commencement speech, Albright didn’t talk about what these women have actually done, nor any proposed action they plan to enact on. This isn’t to say that nothing had been accomplished, Albright wouldn’t have brought this group of women to the audience’s attention if progress hadn’t been made. However, she doesn’t go into any depth on the matter and therefore fails to deliver any additional insight or information to the women of Holyoke. With the “I have seen” portion of that excerpt, Albright implicitly stated that the actions of those that she has witnessed applied to a substantial amount of the female population in Burundi. This is misleading, as leaving that section open to interpretation by the audience could imply that they can make this level of progress as a small group, which is infeasible.
	The most effective way that Albright distracts her audience from noticing the lack of content in her speech is the use of positive words. “To act with courage and faith”, “who risks her life every day to keep alive the hope for democracy in her country”, “It has been said that all work that is worth anything is done in faith.”; All of these phrases and many more interspersed throughout her speech served to make the audience feel like they themselves were acting on examples she gave. This tactic was perfectly employed because, during their first read, the reader is left feeling ready to tackle anything thrown their way.
    The speech’s lack of concrete content is completely unapparent at its surface but still serves its purpose as a generalized commencement speech. Albright effectively places the reader in a cheery mood through her tactfully worded positive statements. She arranged these phrases such that there were always enough happy thoughts to keep the reader engaged, but not too many as to overload them. While she did, at times, leave certain sections of her speech intentionally vague, it left the audience occupied as they filled in the gaps. And her generalized anecdotes were key in upholding the facade of content, by making the reader believe they had been enlightened by their reading. Madeleine Albright made very thought-out choices when crafting the 1977 Mount Holyoke College commencement speech, and her creative word choice allowed her speech to be as effective as it was.</string>
    <string name="checkboxText">Checkbox</string>
</resources>
