<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goTo1"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo2"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        app:layout_constraintTop_toBottomOf="@id/goTo1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo3"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_button"
        app:layout_constraintTop_toBottomOf="@id/goTo2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo4"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_button"
        app:layout_constraintTop_toBottomOf="@id/goTo3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo5"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifth_button"
        app:layout_constraintTop_toBottomOf="@id/goTo4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo6"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixth_button"
        app:layout_constraintTop_toBottomOf="@id/goTo5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/goTo7"
        android:onClick="changeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seventh_button"
        app:layout_constraintTop_toBottomOf="@id/goTo6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>